# esoInterpreters

./: .gitignore  LICENSE  README.md
PaintFuck/C_implementation/src/: pfInterpreter.c
PaintFuck/C_implementation/utils/: cArgParser.c  cArgParser.h  cDataTypes.h  cHashTable.h  cMatrix.c  cStack.c
SmallFuck/C_implementation/: CMakeLists.txt  README.md
SmallFuck/C_implementation/src/: sfInterpreter.c
SmallFuck/C_implementation/tests/: test_suite.py
SmallFuck/C_implementation/utils/: cDataTypes.c  cHashTable.c  cStack.h
SmallFuck/Python_implementation/: README.md  sfInterpreter.py
miniStringFuck/C_implementation/: CMakeLists.txt  README.md
miniStringFuck/C_implementation/src/: msfInterpreter.c
miniStringFuck/C_implementation/tests/: test_suite.py
miniStringFuck/Python_implementation/: README.md  msfInterpreter.py
